e2e/pkg/tests/visibility/test-manifests/gnp-deny-egress.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-egress
spec:
  selector: non-cluster-host == 'true'
  types:
    - Egress
  egress:
    - action: Deny
      protocol: TCP
      destination:
        ports:
          - %d
    - action: Allow
