e2e/pkg/tests/visibility/test-manifests/logcollector-default.yaml
apiVersion: operator.tigera.io/v1
kind: LogCollector
metadata:
  name: tigera-secure
