e2e/pkg/tests/visibility/test-manifests/logcollector-splunk.yaml
apiVersion: operator.tigera.io/v1
kind: LogCollector
metadata:
  name: tigera-secure
spec:
  additionalStores:
    splunk:
      endpoint: %s
